added a result-tab div with a h1 and h2

--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
         <div class="button">Scissors</div>
     </div>
 
+    <div class="result-tab">
+        <h1>RESULT:</h1>
+        <h2>win</h2>
+    </div>
 
 </body>
 </html>
