added a id value to the buttons and linked the script file

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <hr>
 
     <div class="buttons">
-        <div class="button">Rock</div>
-        <div class="button">Paper</div>
-        <div class="button">Scissors</div>
+        <div class="button" id="1">Rock</div>
+        <div class="button" id="2">Paper</div>
+        <div class="button" id="3">Scissors</div>
     </div>
 
     <div class="result-tab">
@@ -25,5 +25,7 @@
         <h2>win</h2>
     </div>
 
+
+    <script src="script.js"></script>
 </body>
 </html>
