added a onClick to every button, id of the div is passed into the function

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <hr>
 
     <div class="buttons">
-        <div class="button" id="1">Rock</div>
-        <div class="button" id="2">Paper</div>
-        <div class="button" id="3">Scissors</div>
+        <div class="button" id="1" onClick="playersOption(this.id)">Rock</div>
+        <div class="button" id="2" onClick="playersOption(this.id)">Paper</div>
+        <div class="button" id="3" onClick="playersOption(this.id)">Scissors</div>
     </div>
 
     <div class="result-tab">
