deleted the onClick from the divs

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <hr>
 
     <div class="buttons">
-        <div class="button" id="1" onClick="playersOption(this.id)">Rock</div>
-        <div class="button" id="2" onClick="playersOption(this.id)">Paper</div>
-        <div class="button" id="3" onClick="playersOption(this.id)">Scissors</div>
+        <div class="button" id="1" onClick="">Rock</div>
+        <div class="button" id="2" onClick="">Paper</div>
+        <div class="button" id="3" onClick="">Scissors</div>
     </div>
 
     <div class="result-tab">
         <h1>RESULT:</h1>
-        <h2>win</h2>
+        <h2 id="resultHeader">win</h2>
     </div>
 
 
