--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <hr>
 
     <div class="buttons">
-        <div class="button" id="1" onClick="">Rock</div>
-        <div class="button" id="2" onClick="">Paper</div>
-        <div class="button" id="3" onClick="">Scissors</div>
+        <div class="button" id="r">Rock</div>
+        <div class="button" id="p" >Paper</div>
+        <div class="button" id="s">Scissors</div>
     </div>
 
     <div class="result-tab">
