changed the way i want to display the score

--- a/index.html
+++ b/index.html
@@ -21,8 +21,14 @@
     </div>
 
     <div class="result-tab">
-        <h1>RESULT:</h1>
-        <h2 id="resultHeader">win</h2>
+        <div class="score-tab">
+            <h1>player</h1>
+            <h1>0</h1>
+        </div>
+        <div class="score-tab">
+            <h1>computer</h1>
+            <h1>0</h1>
+        </div>
     </div>
 
 
