changed the id's

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
     <div class="result-tab">
         <div class="score-tab">
             <h1>player</h1>
-            <h1>0</h1>
+            <h1 id="user-score">0</h1>
         </div>
         <div class="score-tab">
             <h1>computer</h1>
-            <h1>0</h1>
+            <h1 id="computer-score">0</h1>
         </div>
     </div>
 
