added a unselectable class to the buttons

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <hr>
 
     <div class="buttons">
-        <div class="button" id="r">Rock</div>
-        <div class="button" id="p" >Paper</div>
-        <div class="button" id="s">Scissors</div>
+        <div class="button unselectable" id="r">Rock</div>
+        <div class="button unselectable" id="p" >Paper</div>
+        <div class="button unselectable" id="s">Scissors</div>
     </div>
 
     <div class="result-tab">
