--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Rock-Paper-Scissors!</title>
 </head>
 <body>
-    <div class="title">
+    <div class="title" id="banner">
         <h1>Rock-Paper-Scissors</h1>
     </div>
 
