added play again button

--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
         </div>
     </div>
 
+    <div class="button-tab">
+        <div class="play-again">
+            <h1>PLAY AGAIN</h1>
+        </div>
+    </div>
+
 
     <script src="script.js"></script>
 </body>
