added message div

--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
         </div>
     </div>
 
+    <div class="message">
+        <h1>you either lost or won</h1>
+    </div>
+
     <div class="button-tab">
-        <div class="play-again">
+        <div class="play-again" id="play-again">
             <h1>PLAY AGAIN</h1>
         </div>
     </div>
