--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </div>
 
-    <div class="message">
+    <div class="message" id="message-box">
         <h1>you either lost or won</h1>
     </div>
 
