added id's needed to make buttons unclickable after score 5

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <hr>
 
-    <div class="buttons">
+    <div class="buttons" id="buttons">
         <div class="button unselectable" id="r">Rock</div>
         <div class="button unselectable" id="p" >Paper</div>
         <div class="button unselectable" id="s">Scissors</div>
