changed the id to the h1

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </div>
     </div>
 
-    <div class="message" id="message-box">
-        <h1>you either lost or won</h1>
+    <div class="message">
+        <h1 id="message-box">WHO WILL WIN THE GAME?</h1>
     </div>
 
     <div class="button-tab">
